# cron-mng

./: pyproject.toml
app/: __main__.py  sub.py
